tests/ui/pub/pub-ident-struct.rs
pub S {
//~^ ERROR missing `enum` or `struct` for enum or struct definition
}
fn main() {}

// ferrocene-annotations: fls_9ucqbbd0s2yo
// Struct Types
